--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 </head>
 <body>
     <div class="idea">
-        <h2>IDEA </h2>
+        <h2>IDEA Lorena Susana Vivas Comision 50055 </h2>
         <hr>
         <div class="container-fluid text-center">
-          <div class="cuerpo-productos" >
-            <img id="imgProductos" class="imgProductos" src="../img/tigi-productos.jpg" alt="imagen tigi productos">
+          <div class="cuerpo-idea" >
+            <img id="imgDiagrama" class="imgDiagrama" src="IMG/captbikelife1.png" alt="imagen diagrama">
           </div>
             <br>
-            <h3>Descargá los productos!</h3>
-     <p>Podés consultar el informe descargando el pdf en el link<p>
-        <a href="Idea_VivasLorenaS.pdf" target="_blank" class="card-link"> <img src="../img/bedheadproducts (1) (1).jpg"  class="idea-link" alt="idea link"></a>
+            <h3>Mirá el proyecto!</h3>
+     <p>Podés consultar el informe descargando clickeando en la imagen.<p>
+        <a href="Idea_VivasLorenaS.pdf" target="_blank" class="card-link"> <img src="IMG/bikelife.png"  class="idea-link" alt="idea link"></a>
+        <p>Podés consultar el script clickeando en el siguiente link<p>
+          <a href="scriptentxtbikelife21nov.txt" target="_blank" class="card-link"> <p>Descargá Script Aquí<p></p> </a>
       </div>
 
 
