agregando video para mi proyecto

--- a/index.html
+++ b/index.html
@@ -10,18 +10,45 @@
 </head>
 <body>
     <div class="idea">
-        <h2>IDEA Lorena Susana Vivas Comision 50055 </h2>
+      <div class="container-fluid text-center">
+      <h2>Proyecto SQL</h2>
+      <h3>Creación de una base de datos relacional para mi Ecomerce de Indumentaria femenina</h3>
+      <video width="640" height="360" controls>
+        <source src="video/Geneselore-Clothes - Google Chrome 2023-12-17 08-24-07.mp4" type="video/mp4">
+        Tu navegador no soporta el tag de video.
+    </video>
         <hr>
-        <div class="container-fluid text-center">
+        
+          <h3>DER esquemático para este modelo de negocio</h3>
           <div class="cuerpo-idea" >
-            <img id="imgDiagrama" class="imgDiagrama" src="IMG/captbikelife1.png" alt="imagen diagrama">
+            <img id="imgDiagrama" class="imgDiagrama" src="IMG/geneseDerimg.png" alt="imagen diagrama">
           </div>
             <br>
-            <h3>Mirá el proyecto!</h3>
-     <p>Podés consultar el informe descargando clickeando en la imagen.<p>
-        <a href="Idea_VivasLorenaS.pdf" target="_blank" class="card-link"> <img src="IMG/bikelife.png"  class="idea-link" alt="idea link"></a>
+            <div class="container text-center">
+              <h3>Script de creación de la base de datos</h3>
+              <hr>
+              <div class="row">
+                <div class="col">
+                  <img src="IMG/creaciondb/create1.png">
+                </div>
+                <div class="col-6">
+                  <img src="IMG/creaciondb/create2.png">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <img src="IMG/creaciondb/create3.png">
+                </div>
+                <div class="col-6">
+                  <img src="IMG/creaciondb/ceate4.png">
+                </div>
+              </div>
+            </div>
+   
         <p>Podés consultar el script clickeando en el siguiente link<p>
           <a href="scriptentxtbikelife21nov.txt" target="_blank" class="card-link"> <p>Descargá Script Aquí<p></p> </a>
+          <p>Podés consultar el informe descargando clickeando en la imagen.<p>
+            <a href="#" target="_blank" class="card-link"> <img src=""  class="idea-link" alt="idea link"></a>
       </div>
 
 
