--- a/index.html
+++ b/index.html
@@ -44,10 +44,30 @@
                 </div>
               </div>
             </div>
-   
-        <p>Podés consultar el script clickeando en el siguiente link<p>
-          <a href="scriptentxtbikelife21nov.txt" target="_blank" class="card-link"> <p>Descargá Script Aquí<p></p> </a>
-          <p>Podés consultar el informe descargando clickeando en la imagen.<p>
+   <br>
+            <div class="container text-center">
+              <h3>Script de inserción en la base de datos</h3>
+              <hr>
+              <div class="row">
+                <div class="col">
+                  <img src="IMG/inserciondb/insert1.png">
+                </div>
+                <div class="col-6">
+                  <img src="IMG/inserciondb/insert2.png">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <img src="IMG/inserciondb/insert3.png">
+                </div>
+                <div class="col-6">
+                  <img src="IMG/inserciondb/insert4.png">
+                </div>
+              </div>
+            </div>
+        <p>Podés consultar ....<p>
+          <a href="#" target="_blank" class="card-link"> <p>..desc...<p></p> </a>
+          <p> proximamente..Podras consultar el informe descargando clickeando en la imagen.<p>
             <a href="#" target="_blank" class="card-link"> <img src=""  class="idea-link" alt="idea link"></a>
       </div>
 
