--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <br>
          <div class="script">
           <h3>Podés consultar el script!</h3>
-            <a href="geneseindumentariatpmodif1501.sql" target="_blank" class="card-link"> <h5>click aquí</h5> </a>
+            <a href="GeneseIndumentariaDB.sql" target="_blank" class="card-link"> <h5>click aquí</h5> </a>
            </div>
            <br>
           </div>
@@ -45,26 +45,6 @@
                 </div>
                
    <br>
-            <div class="container text-center">
-              <h3>Script de inserción en la base de datos</h3>
-              <hr>
-              <div class="row">
-                <div class="col">
-                  <img src="IMG/inserciondb/insert1.png">
-                </div>
-                <div class="col-6">
-                  <img src="IMG/inserciondb/insert2.png">
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <img src="IMG/inserciondb/insert3.png">
-                </div>
-                <div class="col-6">
-                  <img src="IMG/inserciondb/insert4.png">
-                </div>
-              </div>
-            </div>
         
       </div>
 
